Support to get domains and get apis by domains
